# nomad-lab_VR-demos

./: Dockerfile  LICENSE  README.md
CAVE/NOMADCaveT/: CMakeLists.txt  clean.sh  readme.txt
CAVE/NOMADCaveT/src/: defines.h  main.cpp  main.cpp.mono  main.cpp.stereo  main_server.cpp  points.frag  points.vert  selectedPoints.hpp  textRendering.cpp  textRendering.hpp
FluidDynamics/: LoadPNG.cpp  LoadPNG.h  atomVectors.cpp  atomVectors.h  hellovr_opengl.sln  hellovr_opengl.vcxproj  hellovr_opengl.vcxproj.filters  hellovr_opengl_main.cpp  hsv.c  hsv.h  mwP.cpp  mwP.h
FluidDynamics/Debug/: vc120.idb
FluidDynamics/NOMADVRLib/: CompileGLShader.cpp  CompileGLShader.h  ConfigFile.cpp  ConfigFile.h  Grid.cpp  Grid.h  IsoShaders.cpp  IsoShaders.h  IsosurfacesGL.cpp  IsosurfacesGL.h  MyGL.h  TessShaders.cpp  TessShaders.h  UnitCellShaders.cpp  UnitCellShaders.h  atoms.cpp  atoms.hpp  atomsGL.cpp  atomsGL.h  eprintf.h  markerShaders.cpp  markerShaders.h  polyhedron.cpp  polyhedron.h
FluidDynamics/happyhttp/: happyhttp.cpp  happyhttp.h
FluidDynamics/rapidjson/: reader.h  writer.h
FluidDynamics/rply/: rply.c
GoogleCardboard/: aux.cpp  aux.h  auxiliary.cpp  auxiliary.h
GoogleCardboardAndroid/: readme.md
GoogleCardboardAndroid/NOMADgvrT/: build.gradle  log.txt
GoogleCardboardIOS/: Podfile  TreasureHuntViewController.h  TreasureHuntViewController.mm  readme.md  treasure_hunt_renderer.h  treasure_hunt_renderer.mm
GoogleCardboardIOS/NOMADVRIOS/: NOMADVR-Info.plist  NOMADVRSDK-Info.plist  Podfile  TreasureHuntViewController.mm  launch.xib  treasure_hunt_renderer.h  treasure_hunt_renderer.mm
GoogleCardboardIOS/NOMADVRSDK.xcodeproj/: project.pbxproj
GoogleCardboardIOS/TreasureHuntNDK.xcworkspace/: contents.xcworkspacedata
NOMADGearVRChooser/: AndroidManifest.xml  build.xml  local.properties
NOMADVRLib/: BondShaders.cpp  BondShaders.h  CompileGLShader.cpp  CompileGLShader.h  ConfigFile.cpp  ConfigFile.h  ConfigFileAtoms.cpp  ConfigFileAtoms.h  Grid.cpp  Grid.h  IsoShaders.cpp  IsoShaders.h  IsosurfacesGL.cpp  IsosurfacesGL.h  LoadPNG.cpp  LoadPNG.h  MyGL.h  TessShaders.cpp  TessShaders.h  TexturedShaders.cpp  TexturedShaders.h  UnitCellShaders.cpp  UnitCellShaders.h  atoms.cpp  atoms.hpp  atomsGL.cpp  atomsGL.h  eprintf.h  markerShaders.cpp  markerShaders.h  polyhedron.cpp  polyhedron.h
OculusMobile/: readme.md
OpenVR/: README.md
OpenVR/TimestepData/: LoadPNG.cpp  LoadPNG.h  NOMADViveT.h  TessShaders.cpp  TessShaders.h  UnitCellShaders.cpp  atoms.cpp  happyhttp.cpp  hellovr_opengl.vcxproj  hellovr_opengl.vcxproj.filters  hellovr_opengl_main.cpp  hsv.c  hsv.h
RemoteVisualization/: Makefile  Readme.txt  eprintf.cpp  exportXYZ.cpp  main.cpp
TimestepData/: atoms.cpp  atoms.hpp  hellovr_opengl.sln  hellovr_opengl.vcxproj  hellovr_opengl_main.cpp  hsv.c
containerization/: Dockerfile  README.md
libs/happyhttp/: happyhttp.cpp
libs/rply/: rply.c  rply.h
proxy/: Makefile  proxy.cpp
proxy/MD-driver/: Makefile  PT.xyz  PeriodicTable.cpp  PeriodicTable.h  (+9 more)
supporting/: README.md
textures/: CONTRIBUTORS
webserver/: Dockerfile  Readme-containerization.md  Readme.md  pass
(+165 files in other folders)
